syntax = "proto3";
option java_multiple_files = true;
package com.example.testrestapi;

message GetAnimalIdsRequest {
  int64 productId = 1;
}

message GetAnimalIdsResponse {
  repeated int64 animalIds = 1 [packed=true];
}

message GetProductIdsRequest {
  int64 animalId = 1;
}

message GetProductIdsResponse {
  repeated int64 productIds = 1 [packed=true];
}

service AnimalsService {
  rpc getAnimalIds(GetAnimalIdsRequest) returns (GetAnimalIdsResponse);
}

service ProductsService {
  rpc getProductIds(GetProductIdsRequest) returns (GetProductIdsResponse);
}

